syntax = "proto3";
package pb;
option optimize_for = LITE_RUNTIME;

message SessionInfo {
    uint64 dId = 1;//DecentralizerId
    string pId= 2;//peerId

    uint32 type = 3;
    string name = 4;
    uint64 address = 5;
    uint32 port = 6;
    map<string, string> details = 7;
}

message UpsertSession
{
    SessionInfo info = 1;
}

message DMessage {
    int64 version = 1;
    oneof msg {
        UpsertSession upsertSession = 2;
    }
}