syntax = "proto3";
package pb;
option optimize_for = LITE_RUNTIME;
import "pb/matchmaking.proto";

message RPCHealthRequest {}

message RPCHealthReply {
	bool ready = 1;
	string message = 2;
}

message RPCMessage {
    int64 version = 1;
	int64 id = 2;
	oneof msg {
		//Platform
		RPCHealthRequest healthRequest = 3;
		RPCHealthReply HealthReply = 4;

		//Matchmaking
		RPCUpsertSessionRequest UpsertSessionRequest = 5;
		RPCUpsertSessionResponse UpsertSessionResponse = 6;

		RPCDeleteSessionRequest DeleteSessionRequest = 7;
		RPCDeleteSessionResponse DeleteSessionResponse = 8;

		RPCRefreshSessionsRequest RefreshSessionsRequest = 9;
		RPCRefreshSessionsResponse RefreshSessionsResponse = 10;

		RPCSessionIdsRequest SessionIdsRequest = 11;
		RPCSessionIdsResponse SessionIdsResponse = 12;

		RPCGetSessionRequest GetSessionRequest = 13;
		RPCGetSessionResponse GetSessionResponse = 14;

		//Storage

		//Friends
	}
}